EventBrite tweaks