@@ -5,6 +5,8 @@ import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.base.Strings;
 import com.impactupgrade.nucleus.client.EventBriteClient;
+import com.impactupgrade.nucleus.entity.JobStatus;
+import com.impactupgrade.nucleus.entity.JobType;
 import com.impactupgrade.nucleus.environment.Environment;
 import com.impactupgrade.nucleus.environment.EnvironmentFactory;
 import com.impactupgrade.nucleus.model.CrmAddress;
@@ -47,6 +49,26 @@ public class EventBriteController {
     String eventType = request.getHeader("X-Eventbrite-Event");
     WebhookPayload webhookPayload = new ObjectMapper().readValue(json, WebhookPayload.class);
 
+    // takes a while, so spin it off as a new thread
+    Runnable thread = () -> {
+      try {
+        String jobName = "Eventbrite Event";
+        env.startJobLog(JobType.EVENT, "webhook", jobName, "Eventbrite");
+        env.logJobInfo("received event {}: {}", eventType, webhookPayload.apiUrl);
+        processEvent(eventType, webhookPayload, env);
+        env.endJobLog(JobStatus.DONE);
+      } catch (Exception e) {
+        env.logJobError("failed to process the Eventbrite event", e);
+        env.logJobError(e.getMessage());
+        env.endJobLog(JobStatus.FAILED);
+      }
+    };
+    new Thread(thread).start();
+
+    return Response.status(200).build();
+  }
+
+  private void processEvent(String eventType, WebhookPayload webhookPayload, Environment env) throws Exception {
     CrmService crmService = env.primaryCrmService();
     EventBriteClient eventBriteClient = env.eventBriteClient();
 
@@ -54,24 +76,32 @@ public class EventBriteController {
       case "attendee.updated" -> {
         EventBriteClient.Attendee attendee = eventBriteClient.getAttendee(webhookPayload.apiUrl);
 
+        // attendee can have a partial profile, which could have "Info Requested" as the email/name
+        if (Strings.isNullOrEmpty(attendee.profile.email) || !attendee.profile.email.contains("@")) {
+          env.logJobInfo("skipping registration with invalid email: {}", attendee.profile.email);
+          return;
+        }
+
         CrmContact crmContact = toCrmContact(attendee);
         CrmContact existingContact = crmService.getContactsByEmails(List.of(crmContact.email))
-                .stream().findFirst().orElse(null);
+            .stream().findFirst().orElse(null);
         // Unlikely that they wouldn't already exist, but keep this here as a sanity check.
         upsertCrmContact(crmContact, Optional.ofNullable(existingContact), crmService);
 
+        // make sure it's not an event that existed prior to our integration
         Optional<CrmCampaign> campaign = crmService.getCampaignByExternalReference(attendee.eventId);
-        if (campaign.isPresent()) {
-          crmService.addContactToCampaign(crmContact, campaign.get().id);
+        if (campaign.isEmpty()) {
+          EventBriteClient.Event event = eventBriteClient.getEvent("https://www.eventbriteapi.com/v3/events/" + attendee.eventId + "/");
+          upsertCrmCampaign(event, crmService);
         }
+
+        crmService.addContactToCampaign(crmContact, campaign.get().id);
       }
 
-      case /*"event.created", */"event.updated", "event.published" -> {
+      // Skipping event.created entirely, since it's immediately followed up with an event.updated.
+      case "event.updated", "event.published" -> {
         EventBriteClient.Event event = eventBriteClient.getEvent(webhookPayload.apiUrl);
-
-        CrmCampaign campaign = new CrmCampaign("", event.name.text, event.id);
-        Optional<CrmCampaign> existingCampaign = crmService.getCampaignByExternalReference(event.id);
-        upsertCrmCampaign(campaign, existingCampaign, crmService);
+        upsertCrmCampaign(event, crmService);
       }
       case "event.unpublished" -> {
         EventBriteClient.Event event = eventBriteClient.getEvent(webhookPayload.apiUrl);
@@ -83,30 +113,15 @@ public class EventBriteController {
       }
 
       case "order.placed" -> {
+        env.logJobInfo("waiting 10 sec to process order.placed, giving attendee.updated time to create the contact...");
+        Thread.sleep(10000);
+
         EventBriteClient.Order order = eventBriteClient.getOrder(webhookPayload.apiUrl, "attendees");
-
-        List<CrmContact> crmContacts = processOrderEvent(order, crmService);
-
-        // Use instead the display_price field (if the Ticket Class include_fee field is used) // ?
-        if (order.costs.basePrice.value > 0.0) {
-          CrmDonation crmDonation = toCrmDonation(order);
-          // TODO: which attendee/contact to use for donation?
-          // TODO: 1 donation per 1 attendee?
-          crmDonation.contact = crmContacts.stream().findFirst().get();
-
-          Optional<CrmCampaign> campaign = crmService.getCampaignByExternalReference(order.eventId);
-          if (campaign.isPresent()) {
-            crmDonation.campaignId = campaign.get().id;
-          }
-
-          crmService.insertDonation(crmDonation);
-        }
+        processNewOrder(order, crmService, env);
       }
 
       case "order.refunded" -> {
         EventBriteClient.Order order = eventBriteClient.getOrder(webhookPayload.apiUrl, "attendees");
-
-        processOrderEvent(order, crmService);
 
         Optional<CrmDonation> existingCrmDonation = crmService.getDonationByTransactionId(order.id);
         if (existingCrmDonation.isPresent()) {
@@ -119,8 +134,6 @@ public class EventBriteController {
       case "order.updated" -> {
         EventBriteClient.Order order = eventBriteClient.getOrder(webhookPayload.apiUrl, "attendees");
 
-        processOrderEvent(order, crmService);
-
         Optional<CrmDonation> existingCrmDonation = crmService.getDonationByTransactionId(order.id);
 
         if (existingCrmDonation.isPresent()) {
@@ -128,21 +141,21 @@ public class EventBriteController {
           // TODO: update only specific fields to avoid "overwrite"?
           crmDonation.id = existingCrmDonation.get().id;
           crmService.updateDonation(crmDonation);
+        } else {
+          processNewOrder(order, crmService, env);
         }
       }
 
       default -> {
         System.out.println("Unknown event type: " + eventType);
       }
-
     }
-    return Response.status(200).entity(json).build();
   }
 
   private void upsertCrmContacts(List<CrmContact> contacts, CrmService crmService) throws Exception {
     List<String> emails = contacts.stream()
             .map(crmContact -> crmContact.email)
-            .collect(Collectors.toList());
+            .toList();
     List<CrmContact> existingContacts = crmService.getContactsByEmails(emails);
     Map<String, CrmContact> contactsByEmails = existingContacts.stream()
             .collect(Collectors.toMap(crmContact -> crmContact.email, crmContact -> crmContact));
@@ -150,6 +163,37 @@ public class EventBriteController {
     for (CrmContact crmContact : contacts) {
       Optional<CrmContact> existingContact = Optional.ofNullable(contactsByEmails.get(crmContact.email));
       upsertCrmContact(crmContact, existingContact, crmService);
+    }
+  }
+
+  private void processNewOrder(EventBriteClient.Order order, CrmService crmService, Environment env) throws Exception {
+    // make sure it's not an event that existed prior to our integration
+    Optional<CrmCampaign> campaign = crmService.getCampaignByExternalReference(order.eventId);
+    if (campaign.isEmpty()) {
+      EventBriteClient.Event event = env.eventBriteClient().getEvent("https://www.eventbriteapi.com/v3/events/" + order.eventId + "/");
+      upsertCrmCampaign(event, crmService);
+    }
+
+    // attendee can have a partial profile, which could have "Info Requested" as the email/name
+    List<CrmContact> crmContacts = order.attendees.stream()
+        .filter(attendee -> !Strings.isNullOrEmpty(attendee.profile.email) && attendee.profile.email.contains("@"))
+        .map(this::toCrmContact)
+        .toList();
+    if (crmContacts.isEmpty()) {
+      env.logJobInfo("skipping order with invalid email address(es)");
+      return;
+    }
+
+    // Use instead the display_price field (if the Ticket Class include_fee field is used) // ?
+    if (order.costs.basePrice.value > 0.0) {
+      CrmDonation crmDonation = toCrmDonation(order);
+      // TODO: which attendee/contact to use for donation?
+      // TODO: 1 donation per 1 attendee?
+      crmDonation.contact = crmContacts.stream().findFirst().get();
+
+      crmDonation.campaignId = campaign.get().id;
+
+      crmService.insertDonation(crmDonation);
     }
   }
 
@@ -165,15 +209,6 @@ public class EventBriteController {
     }
   }
 
-  private List<CrmContact> processOrderEvent(EventBriteClient.Order order, CrmService crmService) throws Exception {
-    List<CrmContact> crmContacts = order.attendees.stream()
-            .map(this::toCrmContact)
-            .collect(Collectors.toList());
-    upsertCrmContacts(crmContacts, crmService);
-    addContactsToCampaign(crmContacts, order.eventId, crmService);
-    return crmContacts;
-  }
-
   private void upsertCrmContact(CrmContact contact, Optional<CrmContact> existingContact, CrmService crmService) throws Exception {
     if (existingContact.isEmpty()) {
       contact.id = crmService.insertContact(contact);
@@ -183,7 +218,10 @@ public class EventBriteController {
     }
   }
 
-  private void upsertCrmCampaign(CrmCampaign campaign, Optional<CrmCampaign> existingCampaign, CrmService crmService) throws Exception {
+  private void upsertCrmCampaign(EventBriteClient.Event event, CrmService crmService) throws Exception {
+    CrmCampaign campaign = new CrmCampaign("", event.name.text, event.id);
+    Optional<CrmCampaign> existingCampaign = crmService.getCampaignByExternalReference(event.id);
+
     if (existingCampaign.isEmpty()) {
       campaign.id = crmService.insertCampaign(campaign);
     } else {
@@ -205,11 +243,13 @@ public class EventBriteController {
 
   private CrmAddress toCrmAddress(EventBriteClient.Address address) {
     CrmAddress crmAddress = new CrmAddress();
-    crmAddress.street = address.address1 + " " + address.address2;
-    crmAddress.city = address.city;
-    crmAddress.postalCode = address.postalCode;
-    crmAddress.state = address.region; //?
-    crmAddress.country = address.country;
+    if (address != null) {
+      crmAddress.street = address.address1 + " " + address.address2;
+      crmAddress.city = address.city;
+      crmAddress.postalCode = address.postalCode;
+      crmAddress.state = address.region; //?
+      crmAddress.country = address.country;
+    }
     return crmAddress;
   }
 
